src/objects/Attendance_Event__c.object
<CustomObject>
    <description>Allows storage of absences and tardies from SIS or other systems.</description>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <description>The time the student arrived (used for tardies)</description>
        <label>Arrival Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Class_Period__c</fullName>
        <description>The name of the class period that this is related to.</description>
        <formula>Course_Connection__r.hed__Course_Offering__r.Class_Period__r.Name</formula>
        <label>Class Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows absences to be tracked directly at the student level. Used in cases where the student should be marked absence for an entire day, or late for the school day and not just a particular class.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendance Events</relationshipLabel>
        <relationshipName>Attendance_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ties an absence or tarday event to a specific class</description>
        <label>Course Connection</label>
        <referenceTo>hed__Course_Enrollment__c</referenceTo>
        <relationshipLabel>Attendance Events</relationshipLabel>
        <relationshipName>Attendance_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>The time in which this absence will end</description>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>The reason for the absence or tardy. Likely used when the absence or tardy is excused but nothing in place to prevent a reason fo either excused or unexcused.</description>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>The time at which the absence will start or was noted</description>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Specifies if this is an all day absence, or just for a particular class or classes (one event for each class). Also tracks whether its a late arrival for a class or for the school day in general.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Day Absence</fullName>
                </value>
                <value>
                    <fullName>Class Absence</fullName>
                </value>
                <value>
                    <fullName>School Tardy</fullName>
                </value>
                <value>
                    <fullName>Class Tardy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unexcused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this tardy or absence is unexcused</description>
        <label>Unexcused</label>
        <type>Checkbox</type>
    </fields>
    <label>Attendance Event</label>
    <nameField>
        <label>Attendance Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendance Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>